# routes_app

./: README.md
k8s/: routes-app-deployment.yml  routes-db-deployment.yml  routes-netpol.yml
routes_app/: README.md  dockerfile  pyproject.toml
routes_app/app/: __init__.py  api.py  api_new.py  api_old.py  db.py  main.py
routes_app/tests/: test_routes_api.py
